--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # Astro Runtime includes the following pre-installed providers packages: https://www.astronomer.io/docs/astro/runtime-image-architecture#provider-packages
 apache-airflow-providers-amazon==9.10.0
 apache-airflow-providers-http==5.3.2
+astronomer-cosmos==1.10.1
 minio==7.2.16
 s3fs==2025.3.2
