--- a/dags/dbt/dbt_project.yml
+++ b/dags/dbt/dbt_project.yml
@@ -18,8 +18,8 @@ macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
 clean-targets: # directories to be removed by `dbt clean`
-    - "target"
-    - "dbt_packages"
+  - "target"
+  - "dbt_packages"
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
@@ -28,7 +28,9 @@ clean-targets: # directories to be removed by `dbt clean`
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 models:
-    spacex_dbt:
-        # Config indicated by + and applies to all files under models/staging/
-        staging:
-            +materialized: view
+  spacex_dbt:
+    # Config indicated by + and applies to all files under models/staging/
+    staging:
+      +materialized: view
+    mart:
+      +materialized: table
